# card

./: .gitignore  CPPLINT.cfg  README.md  cross.ini  env.bat  hardware.c  hardware.h  i2c.c  i2c.h  interrupts.c  main.c  meson.build  meson_options.txt  msp430g2553.ld  st25dv.c  st25dv.h  uart.c
.github/workflows/: ci.yml
include/: hardware.h  i2c.h  st25dv.h  uart.h
src/: hardware.c  i2c.c  interrupts.c  main.c  st25dv.c  uart.c
